# md2wechat-py

./: .gitignore  LICENSE  README.md  SKILL.md
design/code/go/: README.md
design/code/python/: README.md  pyproject.toml  setup.py
design/code/python/examples/: 从脚本到CLI-一个Skill开发者的思考.md  地下车库产权之谜.md  我用本质探索方法论拆解了一个工具然后造了自己的.md
design/code/python/wechat_pub/: __init__.py  models.py
design/code/python/wechat_pub/cli/: __init__.py  config.py  convert.py  cover.py  gif.py  inspect.py  layout.py  main.py
design/code/python/wechat_pub/engine/: __init__.py  converter.py  image_engine.py  inline_styler.py  layout_renderer.py  theme_manager.py
design/code/python/wechat_pub/layout/conversion/: cta.yaml  faq.yaml
design/code/python/wechat_pub/layout/judgment/: verdict.yaml
design/code/python/wechat_pub/layout/opening/: hero.yaml  toc.yaml
design/code/python/wechat_pub/layout/sprint4/: callout.yaml
design/code/python/wechat_pub/templates/conversion/: cta.html  faq.html
design/code/python/wechat_pub/templates/judgment/: verdict.html
design/code/python/wechat_pub/templates/opening/: hero.html  toc.html
design/code/python/wechat_pub/templates/sprint4/: callout.html
design/code/python/wechat_pub/wechat/: __init__.py  client.py
design/docs/: 01-本质分析.md  02-架构决策.md  03-模块设计.md  04-排版引擎-四层设计.md  05-微信适配层-四层设计.md  06-图片引擎-四层设计.md  07-跨平台集成层-四层设计.md
design/platform/mcp-server/: README.md
design/platform/trae-rules/: wechat-pub.md
references/: fact-checking.md  image-generation.md  wechat-formatting.md  writing-style-guide.md
workflows/: wechat-publishing.md
(+6 files in other folders)
