[project]
name = "wechat-pub"
version = "0.1.0"
description = "Markdown → 微信公众号排版，Claude 风格设计系统"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "markdown-it-py>=3.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
gif = [
    "Pillow>=10.0",
    "playwright>=1.40",
]
all = [
    "Pillow>=10.0",
    "playwright>=1.40",
    "cairosvg>=2.7",
]

[project.scripts]
wechat-pub = "wechat_pub.cli.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
